fixed overflow-x sticky problem

--- a/src/components/Home_Navigation.css
+++ b/src/components/Home_Navigation.css
@@ -12,6 +12,7 @@
 }
 
 #Home_panel__nav {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   width: 100%;
